<resources>
    <string name="app_name">MyShopApp</string>
    <string name="password_hint">Password</string>
    <string name="email_hint">Email</string>
    <string name="login_title">LOGIN</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="register_title">Register</string>
    <string name="please_wait">Please wait</string>
    <string name="save">Save</string>
</resources>